# gapi/authorization.go
@@ -1,0 +1,42 @@
+package gapi
+
+import (
+	"context"
+	"errors"
+	"fmt"
+	"strings"
+
+	"google.golang.org/grpc/metadata"
+	"pxsemic.com/simplebank/token"
+)
+
+const (
+	authorizationHeader = "authorization"
+	authorizationBearer = "bearer"
+)
+
+func (server *Server) authorizeUser(ctx context.Context) (*token.Payload, error) {
+	md, ok := metadata.FromIncomingContext(ctx)
+	if !ok {
+		return nil, errors.New("missing metadata")
+	}
+	values := md.Get(authorizationHeader)
+	if len(values) == 0 {
+		return nil, errors.New("missing authorization header")
+	}
+	authHeader := values[0]
+	fields := strings.Fields(authHeader)
+	if len(fields) < 2 {
+		return nil, errors.New("invalid authorization header format")
+	}
+	authType := strings.ToLower(fields[0])
+	if authType != authorizationBearer {
+		return nil, errors.New("unsupported authorization type")
+	}
+	accessToken := fields[1]
+	payload, err := server.tokenMaker.VerifyToken(accessToken, token.TokenTypeAccessToken)
+	if err != nil {
+		return nil, fmt.Errorf("invalid access token: %w", err)
+	}
+	return payload, nil
+}
